--- a/src/app/components/search/search.component.html
+++ b/src/app/components/search/search.component.html
@@ -1,11 +1,23 @@
 <div class="searchFormContainer">
-  <h2>Search more than <strong>553M</strong> issues</h2>
-  <mat-form-field class="searchForm">
-    <mat-label>Search GitHub</mat-label>
-    <input matInput type="text" [(ngModel)]="query" (keyup.enter)="query ? search() : null">
-    <button mat-button *ngIf="query" matSuffix mat-icon-button aria-label="Clear" (click)="query=''">
-      <mat-icon>close</mat-icon>
-    </button>
-  </mat-form-field>
-  <button type="submit" mat-raised-button color="primary" [disabled]="!query" (click)="search()">Search</button>
+  <ng-container *ngIf="!isUILoading() && !isUIBlank()">
+    <h2>Search more than <strong>553M</strong> issues</h2>
+    <mat-form-field class="searchForm" [class.errorInput]="isUIError()">
+      <mat-label *ngIf="!isUIError()">Search GitHub</mat-label>
+      <mat-label *ngIf="isUIError()">Search error :(</mat-label>
+      <input
+        matInput
+        type="text"
+        [(ngModel)]="query"
+        (keyup.enter)="query ? search() : null">
+      <mat-error *ngIf="isUIError()">
+      </mat-error>
+      <button mat-button *ngIf="query" matSuffix mat-icon-button aria-label="Clear" (click)="query=''">
+        <mat-icon>close</mat-icon>
+      </button>
+    </mat-form-field>
+    <button type="submit" mat-raised-button color="primary" [disabled]="!query" (click)="search()">Search</button>
+  </ng-container>
+  <ng-container *ngIf="isUILoading()">
+    <mat-spinner></mat-spinner>
+  </ng-container>
 </div>
