--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -1,1 +1,28 @@
-<p>search-results works!</p>
+<div class="limitReached"
+     *ngIf="isUILoading() || rateLimitReached">
+  <mat-spinner *ngIf="isUILoading()"></mat-spinner>
+  <div class="example-rate-limit-reached" *ngIf="rateLimitReached">
+    GitHub's API rate limit has been reached. It will be reset in one minute.
+  </div>
+</div>
+<ng-container *ngIf="!rateLimitReached">
+  <table mat-table [dataSource]="usersService?.users">
+    <ng-container matColumnDef="login">
+      <th mat-header-cell *matHeaderCellDef>Login</th>
+      <td mat-cell *matCellDef="let row">{{row.login}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="avatar_url">
+      <th mat-header-cell *matHeaderCellDef>Picture</th>
+      <td mat-cell *matCellDef="let row"><img class="avatar" [src]="row.avatar_url" [alt]="row.login"></td>
+    </ng-container>
+
+    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+  </table>
+
+  <mat-paginator [length]="usersService.totalResults" [pageSize]="10"></mat-paginator>
+</ng-container>
+
+
+
