--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -5,16 +5,49 @@
     GitHub's API rate limit has been reached. It will be reset in one minute.
   </div>
 </div>
-<ng-container *ngIf="!rateLimitReached">
+<div style="overflow-x: auto" *ngIf="!rateLimitReached">
   <table mat-table [dataSource]="usersService?.users">
+
+    <ng-container matColumnDef="avatar_url">
+      <th mat-header-cell *matHeaderCellDef>Picture</th>
+      <td mat-cell *matCellDef="let row"><img class="avatar" [src]="row.avatar_url" [alt]="row.login"></td>
+    </ng-container>
+
     <ng-container matColumnDef="login">
       <th mat-header-cell *matHeaderCellDef>Login</th>
       <td mat-cell *matCellDef="let row">{{row.login}}</td>
     </ng-container>
 
-    <ng-container matColumnDef="avatar_url">
-      <th mat-header-cell *matHeaderCellDef>Picture</th>
-      <td mat-cell *matCellDef="let row"><img class="avatar" [src]="row.avatar_url" [alt]="row.login"></td>
+    <ng-container matColumnDef="name">
+      <th mat-header-cell *matHeaderCellDef>Name</th>
+      <td mat-cell *matCellDef="let row">{{row.profile.name}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="biography">
+      <th mat-header-cell *matHeaderCellDef>Biography</th>
+      <td mat-cell *matCellDef="let row">{{row?.profile?.bio}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="location">
+      <th mat-header-cell *matHeaderCellDef>Location</th>
+      <td mat-cell *matCellDef="let row">{{row.profile.location}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="company">
+      <th mat-header-cell *matHeaderCellDef>Company</th>
+      <td mat-cell *matCellDef="let row">{{row.profile.company}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="followers">
+      <th mat-header-cell *matHeaderCellDef>Followers</th>
+      <td mat-cell *matCellDef="let row">{{row.profile.followers}}</td>
+    </ng-container>
+
+    <ng-container matColumnDef="score">
+      <th mat-header-cell *matHeaderCellDef>Score</th>
+      <td mat-cell *matCellDef="let row">
+        <mat-icon *ngFor="let item of rating; let i = index;">{{row.score > i ? 'star' : 'star_outline'}}</mat-icon>
+        </td>
     </ng-container>
 
     <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -22,7 +55,7 @@
   </table>
 
   <mat-paginator [length]="usersService.totalResults" [pageSize]="10"></mat-paginator>
-</ng-container>
+</div>
 
 
 
