--- a/src/app/components/search-results/search-results.component.scss
+++ b/src/app/components/search-results/search-results.component.scss
@@ -8,6 +8,11 @@
 }
 .mat-row {
   cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+.mat-row:hover {
+  background-color: ghostwhite;
 }
 
 .mat-header-cell {
