--- a/src/app/components/search-results/search-results.component.html
+++ b/src/app/components/search-results/search-results.component.html
@@ -10,17 +10,17 @@
 
     <ng-container matColumnDef="avatar_url">
       <th mat-header-cell *matHeaderCellDef>Picture</th>
-      <td mat-cell *matCellDef="let row"><img class="avatar" [src]="row.avatar_url" [alt]="row.login"></td>
+      <td mat-cell *matCellDef="let row"><img class="avatar" [src]="row?.avatar_url" [alt]="row?.login"></td>
     </ng-container>
 
     <ng-container matColumnDef="login">
       <th mat-header-cell *matHeaderCellDef>Login</th>
-      <td mat-cell *matCellDef="let row">{{row.login}}</td>
+      <td mat-cell *matCellDef="let row">{{row?.login}}</td>
     </ng-container>
 
     <ng-container matColumnDef="name">
       <th mat-header-cell *matHeaderCellDef>Name</th>
-      <td mat-cell *matCellDef="let row">{{row.profile.name}}</td>
+      <td mat-cell *matCellDef="let row">{{row?.profile?.name}}</td>
     </ng-container>
 
     <ng-container matColumnDef="biography">
@@ -30,23 +30,23 @@
 
     <ng-container matColumnDef="location">
       <th mat-header-cell *matHeaderCellDef>Location</th>
-      <td mat-cell *matCellDef="let row">{{row.profile.location}}</td>
+      <td mat-cell *matCellDef="let row">{{row?.profile?.location}}</td>
     </ng-container>
 
     <ng-container matColumnDef="company">
       <th mat-header-cell *matHeaderCellDef>Company</th>
-      <td mat-cell *matCellDef="let row">{{row.profile.company}}</td>
+      <td mat-cell *matCellDef="let row">{{row?.profile?.company}}</td>
     </ng-container>
 
     <ng-container matColumnDef="followers">
       <th mat-header-cell *matHeaderCellDef>Followers</th>
-      <td mat-cell *matCellDef="let row">{{row.profile.followers}}</td>
+      <td mat-cell *matCellDef="let row">{{row?.profile?.followers}}</td>
     </ng-container>
 
     <ng-container matColumnDef="score">
       <th mat-header-cell *matHeaderCellDef>Score</th>
       <td mat-cell *matCellDef="let row">
-        <mat-icon *ngFor="let item of rating; let i = index;">{{row.score > i ? 'star' : 'star_outline'}}</mat-icon>
+        <mat-icon *ngFor="let item of rating; let i = index;">{{row?.score > i ? 'star' : 'star_outline'}}</mat-icon>
         </td>
     </ng-container>
 
