feat: add home link to toolbar

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <div>
   <mat-toolbar color="primary">
-    <span>GitHub Search!</span>
+    <span style="cursor: pointer" routerLink="/">GitHub Search!</span>
   </mat-toolbar>
   <router-outlet></router-outlet>
 </div>
